# Hygg

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
hygg/: manage.py
hygg/core/utils/: settings.py
hygg/project/settings/: __init__.py  base.py  docker.py  envvars.py
hygg/project/settings/templates/: settings.dev.py
