[project]
name = "hygg"
version = "0.1.0"
description = ""
authors = [{ name = "Trxncoo", email = "tramoscont@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "django-filter (>=25.1,<26.0)",
    "django-split-settings (>=1.3.2,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
]

[tool.isort]
multi_line_output = 5
line_length = 119

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
